# sendspin-client

./: .gitmodules  CI_CD_GUIDE.md  CMakeLists.txt  CONFIGURATION.md  PACKAGING.md  README.md  disable-examples.patch
.github/workflows/: README.md  build-debian-package.yml
debian/: README.md  changelog  control  install  rules  sendspin-client.conf  sendspin-client.conf.example  sendspin-client.preinst  sendspin-client.service
disable-examples/: README.md
src/: CMakeLists.txt  README.md  config_parser.cpp  config_parser.h  main.cpp  utils.cpp  utils.h
src/common/: portaudio_sink.cpp  portaudio_sink.h
